Remove deprecated POST /register API closes gh-9
